--- a/index.html
+++ b/index.html
@@ -64,13 +64,19 @@
           <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
 
             <script src="js/script.js"></script>
-            <script>
+            <script type="text/javascript">
+
+              var _gaq = _gaq || [];
+              _gaq.push(['_setAccount', 'UA-33926514-1']);
+              _gaq.push(['_setDomainName', 'clojuredc.org']);
+              _gaq.push(['_trackPageview']);
+
               (function() {
-                var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-                (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-                  g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-                  s.parentNode.insertBefore(g,s)}(document,'script'));
-              })
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+              })();
+
             </script>
           </body>
         </html>
